CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(UltraPong)

SET(PATH_ROOT  "${CMAKE_CURRENT_SOURCE_DIR}")
SET(PATH_SRC   "${PATH_ROOT}/src")
SET(PATH_BIN   "${PATH_ROOT}/bin")
SET(PATH_CMAKE "${PATH_ROOT}/cmake")
SET(PATH_ASSET "${PATH_ROOT}/asset")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PATH_BIN})
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PATH_CMAKE}/module")

FILE(MAKE_DIRECTORY ${PATH_BIN})

ADD_SUBDIRECTORY(${PATH_SRC})
